css/custom.css
/****** PLACE YOUR CUSTOM STYLES HERE ******/

.nyt-header {
  /*border-bottom: 1px solid rgba(255,255,255,0.3);
  border-top: 1px solid rgba(255,255,255,0.3); */
  text-shadow: 0 0 5px rgba(0,0,0,0.4);
}

.text-shadow {
  /*padding-left: .8%;
  padding-right: .8%;
  background: rgba(0,0,0,0.3); */

  text-shadow: 0 0 2.5px rgba(0,0,0,1);
}

.image-slider.height-40 .slides li {
  height: 40vh;

}

.list-inline a {
  color: #505050;
}

.h1mod {
  font-size: 4.3vw;
  margin-top:-5px;
}

.btn-NG:hover,
.image-bg .btn:hover,
.image-bg .btn:visited:hover {
  background: #ffce00;
  border-color: #ffce00;
}
.module.widget-handle-menu {
  padding: 0 16px;
  cursor: pointer;
  position: relative;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  margin: 0;
}

